# todomvc_wasm

./: .bazelrc  BUILD  Cargo.toml  WORKSPACE  cargo-bazel.lock.json  index.html  package-lock.json  package.json
server/: BUILD  Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
static/: index.html  todomvc-wasm-f6640c1c21134b94.js  todomvc-wasm-f6640c1c21134b94_bg.wasm
