[package]
name = "todomvc-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"

[workspace]
members = [".", "server"]

[dependencies]
log = "0.4.20"
rand = "0.8.5"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = "0.3.67"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

