[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]

todomvc-wasm = { path = ".." }

hyper = { version = "1.1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "map-response-body"] }
tower = { version = "0.4", features = ["make"] }
http-body = "1.0.0"

